@@ -27,6 +27,11 @@ hg tip
   if an exception should be raised in case there are no cookies to unset.
   `True` by default.
 
+* Make sure that 304 Not Modified responses generated by
+  :meth:`Response.conditional_response_app` exclude Content-{Length/Type}
+  headers
+
+
 0.9.7.1
 -------
 
